fix: merge WorkerTask and WorkerTaskTrigger